feat: update local code to use generated code, update pagination
